# ProxmoxMCP-Plus

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
proxmox-config/: claude_desktop_config.example.json  config.example.json
src/proxmox_mcp/: server.py
src/proxmox_mcp/tools/: cluster.py  containers.py  definitions.py  vm.py
tests/: test_server.py
