[project]
name = "proxmox-mcp-plus"
version = "0.2.0"
description = "Streamable-HTTP Proxmox MCP server for Claude Code / Desktop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "proxmoxer>=2.0.1",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "paramiko>=3.0.0,<4.0.0",
    "anyio>=4.0.0",
]

[project.scripts]
proxmox-mcp = "proxmox_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxmox_mcp"]
